--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
   },
   "private": true,
   "dependencies": {
-    "@abstractplay/gameslib": "^1.0.0-ci-15144861810.0",
-    "@abstractplay/renderer": "^1.0.0-ci-12341219895.0",
+    "@abstractplay/gameslib": "latest",
+    "@abstractplay/renderer": "latest",
     "@atlaskit/pragmatic-drag-and-drop": "^1.3.0",
     "@tanstack/react-table": "^8.11.2",
     "@testing-library/jest-dom": "5.16.5",
